--- a/AlveoEnergy/src/app/components/gantt/gantt.component.scss
+++ b/AlveoEnergy/src/app/components/gantt/gantt.component.scss
@@ -15,11 +15,11 @@
 }
 
 .gantt_grid_head_add{
-	display: none;
+	display: none!important;
 }
 
 .gantt_add {
-	display: none;
+	display: none!important;
 }
 
 .buttonBg{
