added personnel gantt

--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -9,6 +9,8 @@
 	<a routerLink="/quote-component" routerLinkActive="active">Quotes</a>
 	<a routerLink="/vpn-component" routerLinkActive="active">VPN and Passwords</a>
 	<a (click)="logout()">Logout</a>
+	<a routerLink="/personnel.gantt-component" routerLinkActive="active">Personnel Tasks</a>
+
   </div>
   
   <div class="content">
