--- a/AlveoEnergy/src/app/components/projects/projects.component.html
+++ b/AlveoEnergy/src/app/components/projects/projects.component.html
@@ -10,7 +10,7 @@
 
   <ng-container matColumnDef="projectNumber">
     <th mat-header-cell *matHeaderCellDef> Project Number </th>
-    <td mat-cell *matCellDef="let element"> {{element.ProjectNumber}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Number}} </td>
   </ng-container>
 
   <ng-container matColumnDef="projectName">
@@ -30,7 +30,7 @@
 
   <ng-container matColumnDef="projectLeader">
     <th mat-header-cell *matHeaderCellDef> Leader </th>
-    <td mat-cell *matCellDef="let element"> {{element.ProjectLeader}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.Leader}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedProjectsColumnsList"></tr>
@@ -77,6 +77,7 @@
           <input style="text-align: right;" [(ngModel)]="nGanttColor" type="color" name="projecColorInput" required/>
         </div>
       </div>
+      <div style="text-align: center; color: green; font-size: large;" id="alertProject"></div>
       <div class="btn-block">
         <button type="submit" (click)="CreateProject(nProjectNumber, nProjectName, nprojectStart, nProjectend, nProjectLeader, nGanttColor )" >Submit</button>
       </div>
@@ -114,6 +115,7 @@
           <input style="text-align: right;" [(ngModel)]="nLinkedProject" type="text" name="linkedProjectInput" required/>
         </div>
       </div>
+      <div style="text-align: center; color: green; font-size: large;" id="alertTask"></div>
       <div class="btn-block">
         <button type="submit" (click)="CreateTask(nTaskName, nTaskStart, nTaskend, nResponsiblePerson, nLinkedProject)" >Submit</button>
       </div>
