Commented Quote system For Unit tests

--- a/AlveoEnergy/src/app/app.component.html
+++ b/AlveoEnergy/src/app/app.component.html
@@ -4,7 +4,7 @@
 	<a routerLink="/inventory-component" routerLinkActive="active">Inventory</a>
 	<a routerLink="/personnel-component" routerLinkActive="active">Personnel</a>
 	<a routerLink="/orders-component" routerLinkActive="active">Orders</a>
-	<a routerLink="/quote-component" routerLinkActive="active">Quotes</a>
+	<!--<a routerLink="/quote-component" routerLinkActive="active">Quotes</a>-->
 	<a routerLink="/vpn-component" routerLinkActive="active">VPN and Passwords</a>
 	<a (click)="logout()">Logout</a>
 	<a routerLink="/personnel.gantt-component" routerLinkActive="active">Personnel Tasks</a>
